--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ input {
     padding: 10px;
     font-size: 16px;
     border: 2px solid #bdc3c7;
-}   
+}
 
 button {
     border: none;
@@ -51,6 +51,7 @@ button {
     color: white;
     width: 8%;
     height: 40px;
+    cursor: pointer;
 }
 
 button:hover {
@@ -79,23 +80,28 @@ button:hover {
     padding-left: 40px;
 }
 
-.result-container h2 {
+.result-container h3 {
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 15px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
 }
+
+.result-container h4 {
+    font-size: 1.2rem;
+    margin-left: 10px;
+}
+
 .result-container p {
     margin-top: 15px;
     line-height: 1.5;
 }
+
 footer {
     background-color: #0b7ced;
     color: #fff;
     text-align: center;
     padding: 10px 0;
 }
+
 .error {
     color: #dc2626;
     margin-top: 10px;
@@ -109,4 +115,3 @@ footer {
         padding-left: 10px;
     }
 }
-
